--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.cursorClass{
+    cursor:pointer;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+    border-bottom: 1px solid #aa9d9d;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ColorTheme span{
+    width: 35px;
+    height: 28px;
+    margin: 7px;
+    border-radius: 20%;
+    cursor: pointer;
+    border: 1px solid black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ColorTheme span:nth-child(1) {
+  background-color: #012e88;
 }
-
-.App-link {
-  color: #61dafb;
+.ColorTheme span:nth-child(2) {
+  background-color: #067f7b;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ColorTheme span:nth-child(3) {
+  background-color:#4f6909;
+}
+.ColorTheme span:nth-child(4) {
+  background-color: #6d0576;
+}
+.MyPara{
+  height:20px;
 }
